; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_lua.c_push_module_table.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_lua.c_push_module_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"package\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"loaded\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @push_module_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_module_table(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = call i32 @lua_getglobal(i32* %5, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @lua_getfield(i32* %7, i32 -1, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @lua_remove(i32* %9, i32 -2)
  %11 = load i32*, i32** %3, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @lua_getfield(i32* %11, i32 -1, i8* %12)
  %14 = load i32*, i32** %3, align 8
  %15 = call i64 @lua_isnil(i32* %14, i32 -1)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %27

17:                                               ; preds = %2
  %18 = load i32*, i32** %3, align 8
  %19 = call i32 @lua_pop(i32* %18, i32 1)
  %20 = load i32*, i32** %3, align 8
  %21 = call i32 @lua_newtable(i32* %20)
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @lua_pushvalue(i32* %22, i32 -1)
  %24 = load i32*, i32** %3, align 8
  %25 = load i8*, i8** %4, align 8
  %26 = call i32 @lua_setfield(i32* %24, i32 -3, i8* %25)
  br label %27

27:                                               ; preds = %17, %2
  %28 = load i32*, i32** %3, align 8
  %29 = call i32 @lua_remove(i32* %28, i32 -2)
  ret void
}

declare dso_local i32 @lua_getglobal(i32*, i8*) #1

declare dso_local i32 @lua_getfield(i32*, i32, i8*) #1

declare dso_local i32 @lua_remove(i32*, i32) #1

declare dso_local i64 @lua_isnil(i32*, i32) #1

declare dso_local i32 @lua_pop(i32*, i32) #1

declare dso_local i32 @lua_newtable(i32*) #1

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_setfield(i32*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
